@media screen and (max-width: 950px)

--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
 
     <!-- content-->
     <div class="content-tl">
-      <p class="t-tl"> Selected Projects </p>
+      <p class="t-text-l"> Selected Projects </p>
       <img class="se-arrow" src="./arrow-se.svg" alt="se-arrow">
     </div>
     <!-- content-->
@@ -234,7 +234,7 @@
     </div>
     <!-- content-->
     <div class="content-tl">
-      <a href="/architecture" class="t-tl"> Architecture
+      <a href="/architecture" class="t-text-l"> Architecture
       </a>
       <img class="se-arrow" src="./arrow-se.svg" alt="se-arrow">
     </div>
@@ -461,7 +461,7 @@
     <!-- content-->
 
     <div class="content-tl">
-      <a href="/photography" class="t-tl"> Photography
+      <a href="/photography" class="t-text-l"> Photography
       </a>
       <img href="/photography" class="se-arrow" src="./arrow-se.svg" alt="se-arrow">
 
@@ -822,7 +822,7 @@
     <!-- photography new-->
     <!-- content-->
     <div class="content-tl">
-      <p class="t-tl"> About Me
+      <p class="t-text-l"> About Me
       </p>
       <img class="se-arrow" src="./arrow-se.svg" alt="se-arrow">
 
