--- a/gardeners_hub/index.html
+++ b/gardeners_hub/index.html
@@ -133,7 +133,7 @@
         Interviewing, Storyboarding, Experience Prototyping,
         Adobe XD, Sketch
       </p>
-      <p class="t-text-s"><strong>Duration:</strong> &nbsp; January 2021 - March 2021
+      <p class="t-text-s"><strong>Duration:</strong> &nbsp; 8 Weeks
       </p>
     </div>
   </div>
@@ -391,7 +391,7 @@
 
   <!-- 01 -->
   <div class="body-margin">
-    <P class="text-project-numbers">01</P>
+    <P class="text-project-numbers color-gh">01</P>
 
 
 
@@ -1072,7 +1072,7 @@
   <!-- 02 -->
   <div class="body-margin">
 
-    <P class="text-project-numbers">02</P>
+    <P class="text-project-numbers color-gh">02</P>
     <div class="row-change center-v margin">
       <div class="column">
         <P class="t-title-l">SECONDARY RESEARCH </P>
@@ -1278,7 +1278,7 @@
 
   <!-- 03 IDEATION -->
 
-  <P class="text-project-numbers">03</P>
+  <P class="text-project-numbers color-gh">03</P>
   <div class="body-margin">
 
     <div class="row-change center-v margin">
@@ -2641,7 +2641,7 @@
 
   <!-- 04 -->
   <div class="body-margin">
-    <P class="text-project-numbers">04</P>
+    <P class="text-project-numbers color-gh">04</P>
 
     <div class="row-change center-v margin">
       <div class="column">
@@ -2945,6 +2945,5 @@
   </div>
 </div>
 <!--footer-->
-</div>
 
 </html>
