--- a/project/index.html
+++ b/project/index.html
@@ -1,9 +1,10 @@
 <html>
 
 <head>
+  <link rel="stylesheet" href="../main.css">
+  <script type="text/javascript" src="../scripts.js"></script>
 
-  <link rel="stylesheet" href="main.css" />
-  <script type="text/javascript" src="scripts.js"></script>
+
 
   <link
     href="https://fonts.googleapis.com/css2?family=Titillium+Web:ital,wght@0,200;0,300;0,400;0,600;0,700;0,900;1,200;1,300;1,400;1,600;1,700&display=swap"
@@ -48,6 +49,7 @@
 
 
 
+
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
@@ -58,8 +60,8 @@
   <meta property="og:type" content="website" />
   <meta property="og:title" content="VICKY WANG" />
   <meta property="og:description" content="Hi! Thanks for stopping by. 
-    I enjoy design and code who loves solving challenging problems. 
-    Interested in what you see? Shoot me an email :) " />
+  I enjoy design and code who loves solving challenging problems. 
+  Interested in what you see? Shoot me an email :) " />
   <meta property="og:image" content="//s3-us-west-1.amazonaws.com/vickywang.design/thumbnail.jpg" />
   <meta property="og:image:type" content="image/png">
   <meta property="og:image:width" content="750">
@@ -76,6 +78,7 @@
   <meta property="og:image:type" content="image/png">
   <meta property="og:image:width" content="750">
   <meta property="og:image:height" content="750">
+
 </head>
 
 <body>
@@ -93,7 +96,7 @@
       </a>
     </div>
     <div class="head-right ">
-      <a href="/project" class="inactive head-right-1550 box">
+      <a href="/project" class="active head-right-1550 box">
         PROJECT
       </a>
       <a href="/architecture" class="inactive head-right-1550 box">
@@ -104,7 +107,7 @@
         PHOTOGRAPHY
       </a>
 
-      <a href="/" class="active head-right-1550 box">
+      <a href="/about" class="inactive head-right-1550 box" id="about">
         ABOUT
       </a>
     </div>
