--- a/architecture/index.html
+++ b/architecture/index.html
@@ -133,12 +133,12 @@
         <p class="divider"></p>
         <div class="body-v">
           <div class="t-me t-me-1" id="t-me-1550">
-            Selected academic projects </div>
+            selected academic projects </div>
           <div class="body-intro">
 
-            <span class="t-me" id="t-me-1550">Architecture</span>
+            <span class="t-me" id="t-me-1550">architecture</span>
             <span class="divider1"></span>
-            <span class="t-me" id="t-me-1550"> Design </span>
+            <span class="t-me" id="t-me-1550"> design </span>
           </div>
 
         </div>
