--- a/index.html
+++ b/index.html
@@ -159,76 +159,86 @@
       <img class="se-arrow" src="./arrow-se.svg" alt="se-arrow">
     </div>
     <!-- content-->
-    <!--GARDENERS HUB-->
-    <div id="ytrigger">
-      <div class="body-h">
-        <div class="body-left body-img float">
-          <a href="/gardeners_hub">
-            <img src="./layout_gardenershub.png" alt="Gardeners' Hub">
-          </a>
-        </div>
-
-        <div class="body-right body-txt">
-          <a href="/gardeners_hub" class="t-title-l" data-aos="fade-up">GARDENERS HUB</a>
-          <p class="horizontal-line"></p>
-          <p class="t-text-m">A marketplace for local community</p>
-          <p class="t-text-m">May 2021 - August 2021</p>
+    <!-- Product -->
+    <div class="carousel">
+      <div class="nav nav-left">
+        <div class="ion-chevron-left carousel-arrow-icon-left">
+          <img src="./arrow-left.svg" alt="left">
         </div>
       </div>
 
+      <div class="carousel-content">
+
+        <div class="slide">
+          <div>
+            <div class="body-h">
+              <div class="body-right  body-txt">
+                <a href="/gardeners_hub" class="t-title-m">  GARDENERS HUB</a>
+                <p class="horizontal-line"></p>
+                <p class="t-text-s">A marketplace for local community</p>
+                <p class="t-text-s">May 2021 - August 2021 </p>
+              </div>
+              <div class="vertical-line">
+              </div>
+              <div class="body-left">
+                <a href="/gardeners_hub">
+                  <img id="carousel-project-img" src="./layout_gardenershub.png" alt="Architecture">
+                </a>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="slide">
+          <div>
+            <div class="body-h">
+              <div class="body-right  body-txt">
+                <a href="/meal_planner" class="t-title-m"> MEAL PLANNER                </a>
+                <p class="horizontal-line"></p>
+                <p class="t-text-s">A mobile app helps planning a healthy meal
+
+                </p>
+                <p class="t-text-s">May 2021 - August 2021 </p>
+              </div>
+              <div class="vertical-line">
+              </div>
+              <div class="body-left">
+                <a href="/meal_planner">
+                  <img id="carousel-project-img" src="./layout_mealplanner.png" alt="GARDENERS HUB">
+                </a>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="slide">
+          <div>
+            <div class="body-h">
+              <div class="body-right  body-txt">
+                <a href="/alltrails" class="t-title-m">   REDESIGN ALLTRAILS APP </a>
+                <p class="horizontal-line"></p>
+                <p class="t-text-s">Adding comparison features to help user planning their hiking trip</p>
+                <p class="t-text-s">May 2021 - August 2021 </p>
+              </div>
+              <div class="vertical-line">
+              </div>
+              <div class="body-left">
+                <a href="/alltrails">
+                  <img id="carousel-project-img" src="./layout_alltrails.png" alt="REDESIGN ALLTRAILS APP">
+                </a>
+              </div>
+            </div>
+          </div>
+        </div>
+
+      </div>
+
+      <div class="nav nav-right">
+        <div class="ion-chevron-right carousel-arrow-icon-right">
+          <img src="./arrow-right.svg" alt="right">
+        </div>
+      </div>
     </div>
-
-    <!--GARDENERS HUB-->
-
-
+    <!-- Product -->
     <br>
-
-    <!--MEAL PLANNER-->
-    <div id="ytrigger1">
-
-      <div class="body-h">
-        <div class="body-right  body-txt">
-          <a href="/meal_planner" class="t-title-l" data-aos="fade-up">MEAL PLANNER</a>
-          <p class="horizontal-line"></p>
-
-          <p class="t-text-m">A mobile app helps planning a healthy meal</p>
-          <p class="t-text-m">May 2021 - August 2021</p>
-        </div>
-        <div class="body-left body-img float">
-          <a href="/meal_planner">
-            <img src="./layout_mealplanner.png" alt="Meal Planner">
-          </a>
-        </div>
-      </div>
-    </div>
-
-    <!--MEAL PLANNER-->
-    <br>
-    <!--ALLTRAILS-->
-    <div id="ytrigger2">
-
-      <div class="body-h">
-
-        <div class="body-left body-img float">
-          <a href="/alltrails">
-            <img src="../layout_alltrails.png" alt="Redesign AllTrails">
-          </a>
-        </div>
-
-        <div class="body-right body-txt">
-          <a href="/alltrails" class="t-title-l" data-aos="fade-up">REDESIGN ALLTRAILS APP</a>
-          <p class="horizontal-line"></p>
-
-          <p class="t-text-m">Spring 2021</p>
-        </div>
-      </div>
-    </div>
-    <!--ALLTRAILS-->
-
-
-    <div class="body-h">
-      <p class="vertical-line ver2"></p>
-    </div>
     <!-- content-->
     <div class="content-tl">
       <a href="/architecture" class="t-text-l"> Architecture
