--- a/photography/index.html
+++ b/photography/index.html
@@ -132,12 +132,12 @@ Interested in what you see? Shoot me an email :) " />
         <p class="divider"></p>
         <div class="body-v">
           <div class="body-intro">
-            <span class="t-me" id="t-me-1550">Photography</span>
+            <span class="t-me" id="t-me-1550">photography</span>
             <span class="divider1"></span>
-            <span class="t-me" id="t-me-1550"> Nature observation </span>
+            <span class="t-me" id="t-me-1550"> nature observation </span>
           </div>
           <div class="t-me t-me-1" id="t-me-1550">
-            is my favorite hobby. </div>
+            is of my favorite hobby. </div>
         </div>
       </div>
       <p class="t-intro z-index-top">
