--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
                 <a href="/alltrails" class="t-title-m">   REDESIGN ALLTRAILS APP </a>
                 <p class="horizontal-line"></p>
                 <p class="t-text-s">Adding comparison features to help user planning their hiking trip</p>
-                <p class="t-text-s">May 2021 - August 2021 </p>
+                <p class="t-text-s">August 2021 </p>
               </div>
               <div class="vertical-line">
               </div>
