--- a/photography/index.html
+++ b/photography/index.html
@@ -137,7 +137,7 @@ Interested in what you see? Shoot me an email :) " />
             <span class="t-me" id="t-me-1550"> nature observation </span>
           </div>
           <div class="t-me t-me-1" id="t-me-1550">
-            is of my favorite hobby. </div>
+            is one of my favorite hobby. </div>
         </div>
       </div>
       <p class="t-intro z-index-top">
