--- a/project/gardeners_hub/index.html
+++ b/project/gardeners_hub/index.html
@@ -1,8 +1,8 @@
 <html>
 
 <head>
-  <link rel="stylesheet" href="../main.css">
-  <script type="text/javascript" src="../scripts.js"></script>
+  <link rel="stylesheet" href="../../main.css">
+  <script type="text/javascript" src="../../scripts.js"></script>
 
   <link
     href="https://fonts.googleapis.com/css2?family=Titillium+Web:ital,wght@0,200;0,300;0,400;0,600;0,700;0,900;1,200;1,300;1,400;1,600;1,700&display=swap"
@@ -430,7 +430,7 @@
     <br>
 
 
-    <div class="column margin">
+    <div class="column">
       <div class="row">
         <P class="t-title-m">USER RESEARCH </P>
         <img class="icon-s float" src="icon_userResearch.svg" alt="User Research" class="image">
