--- a/project/index.html
+++ b/project/index.html
@@ -166,13 +166,13 @@
     <div id="ytrigger">
       <div class="body-h">
         <div class="body-left body-img float">
-          <a href="/gardeners_hub">
+          <a href="/project/gardeners_hub">
             <img src="../layout_gardenershub.png" alt="Gardeners' Hub">
           </a>
         </div>
 
         <div class="body-right body-txt">
-          <a href="/gardeners_hub" class="t-title-l" data-aos="fade-up">GARDENERS HUB</a>
+          <a href="/project/gardeners_hub" class="t-title-l" data-aos="fade-up">GARDENERS HUB</a>
           <p class="horizontal-line"></p>
           <p class="t-text-m">A marketplace for local community</p>
           <p class="t-text-m">May 2021 - August 2021</p>
@@ -191,14 +191,14 @@
 
       <div class="body-h">
         <div class="body-right  body-txt">
-          <a href="/meal_planner" class="t-title-l" data-aos="fade-up">MEAL PLANNER</a>
+          <a href="/project/meal_planner" class="t-title-l" data-aos="fade-up">MEAL PLANNER</a>
           <p class="horizontal-line"></p>
 
           <p class="t-text-m">A mobile app helps planning a healthy meal</p>
           <p class="t-text-m">May 2021 - August 2021</p>
         </div>
         <div class="body-left body-img float">
-          <a href="/meal_planner">
+          <a href="/project/meal_planner">
             <img src="../layout_mealplanner.png" alt="Meal Planner">
           </a>
         </div>
